# setup.cfg
[metadata]
name = Extractable
version = attr: Extractable.version.__version__
author = Suleymen C. Kandrouch
author_email = suleyleeuw@gmail.com
keywords = python, table-extraction, pdf, TATR, Table Transformer, Computer Vision

# add a description of your package
description = Extract Tables from PDFs
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/SuleyNL/Extractable
download_url = https://github.com/SuleyNL/Extractable/archive/refs/tags/v1.0.0.tar.gz

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers =
    # for a full list of classifiers see https://pypi.org/classifiers/
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    # list the dependencies required by your package
    numpy >=1.24.2
    matplotlib >= 3.7.0
    setuptools >=61.0
    wheel
    toolz ~= 0.12.0
    torch ~= 2.0.1
    Pillow ~= 9.5.0
    transformers ~= 4.29.2
    matplotlib >=3
    pdf2image ~= 1.16.3
    pdf2jpg ~= 1.1
    scipy ~= 1.10.1
    timm
    defusedxml
    Faker ~= 18.9.0


python_requires = >=3.8