# setup.cfg
[metadata]
name = Extractable
version = attr: Extractable.version.__version__
author = Suleymen C. Kandrouch
author_email = suleyleeuw@gmail.com
keywords = python, table-extraction, pdf, TATR, Table Transformer, Computer Vision

# add a description of your package
description = Extract Tables from PDFs
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/SuleyNL/Extractable
download_url = https://github.com/SuleyNL/Extractable/archive/refs/tags/v1.0.0.tar.gz

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers =
    # for a full list of classifiers see https://pypi.org/classifiers/
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    # list the dependencies required by your package
    Faker ~= 18.9.0,
    Pillow >= 9.2.0,
    PyPDF2 ~= 3.0.1,
    build ~= 0.10.0,
    defusedxml ~= 0.7.1,
    matplotlib >=3,
    mkdocs ~= 1.4.3,
    openpyxl ~= 3.1.2,
    pandas ~= 2.0.2,
    pandas-stubs ~= 2.0.2.230605 ,
    pdf2image ~= 1.15.1,
    pdf2jpg ~= 1.1,
    pdm ~= 2.7.0,
    pytesseract ~= 0.3.10 ,
    scipy ~= 1.10.1,
    setuptools >=61.0,
    svgwrite ~= 1.4.3,
    timm ~= 0.9.2,
    toolz ~= 0.12.0,
    torch ~= 2.0.1,
    transformers ~= 4.29.2,
    wheel ~= 0.40.0,

python_requires = >=3.8